--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "angular": "~1.4.5",
     "angularfire": "~1.1.2",
-    "firebase": "~2.2.9"
+    "firebase": "~2.2.9",
+    "geofire": "~3.2.2",
+    "ngCordova": "~0.1.20-alpha"
   }
 }
