--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
     "angularfire": "~1.1.2",
     "firebase": "~2.2.9",
     "geofire": "~3.2.2",
-    "ngCordova": "~0.1.20-alpha",
-    "angular-carousel": "~0.3.13"
+    "ngCordova": "~0.1.20-alpha"
   }
 }
