--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angularfire": "~1.1.2",
     "firebase": "~2.2.9",
     "geofire": "~3.2.2",
-    "ngCordova": "~0.1.20-alpha"
+    "ngCordova": "~0.1.20-alpha",
+    "angular-slick": "~0.2.1"
   }
 }
