--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "chat-v2: An Ionic project",
   "dependencies": {
+    "chai": "^3.2.0",
     "firebase": "^2.2.9",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3"
+    "gulp-sass": "^1.3.3",
+    "karma": "^0.13.9",
+    "mocha": "^2.3.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
