--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,14 @@
   },
   "dependencies": {
     "angular": "~1.4.5",
+    "angular-mocks": "~1.4.5",
+    "angular-slick": "~0.2.1",
     "angularfire": "~1.1.2",
+    "chai": "~3.3.0",
     "firebase": "~2.2.9",
     "geofire": "~3.2.2",
-    "ngCordova": "~0.1.20-alpha",
+    "karma": "~0.4.6",
+    "mocha": "~2.3.2",
+    "ngCordova": "~0.1.20-alpha"
   }
 }
