--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "karma": "^0.13.9",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-mocha": "^0.2.0",
     "mocha": "^2.3.2"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "karma-requirejs": "^0.2.2",
+    "requirejs": "^2.1.20",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
