--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "geofire": "~3.2.2",
     "karma": "~0.4.6",
     "mocha": "~2.3.2",
-    "ngCordova": "~0.1.20-alpha"
+    "mockfirebase": "~0.11.0",
+    "ngCordova": "~0.1.20-alpha",
+    "sinon-1.16.1": "http://sinonjs.org/releases/sinon-1.16.1.js"
   }
 }
