--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "mockfirebase": "~0.11.0",
     "ngCordova": "~0.1.20-alpha",
     "sinon-1.16.1": "http://sinonjs.org/releases/sinon-1.16.1.js"
+  },
+  "resolutions": {
+    "angular": "~1.4.5"
   }
 }
